--- a/env.example
+++ b/env.example
@@ -6,9 +6,18 @@
 DCRD_RPC_USER=decred
 DCRD_RPC_PASS=change_this_to_a_secure_password
 
+# Dcrwallet RPC Credentials
+# Used by dcrwallet and the backend to access wallet
+DCRWALLET_RPC_USER=dcrwallet
+DCRWALLET_RPC_PASS=change_this_to_a_secure_wallet_password
+
 # Optional: dcrd version/branch to build (default: master)
 # Can be a tag (e.g., release-v2.0.6) or branch name
 # DCRD_VERSION=master
+
+# Optional: dcrwallet version/branch to build (default: master)
+# Can be a tag (e.g., release-v4.0.0) or branch name
+# DCRWALLET_VERSION=releaxe-v2.0.6
 
 # Optional: Uncomment for testnet
 # DCRD_TESTNET=1
