--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "lucide-react": "^0.462.0",
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.23",
