raise default gap limit and fix rescan progress

--- a/env.example
+++ b/env.example
@@ -19,6 +19,13 @@ DCRWALLET_RPC_PASS=change_this_to_a_secure_wallet_password
 # Can be a tag (e.g., release-v4.0.0) or branch name
 # DCRWALLET_VERSION=releaxe-v2.0.6
 
+# Dcrwallet Address Gap Limit (default: 1000)
+# This controls how many consecutive unused addresses the wallet will monitor
+# Increase this if you have funds at higher address indices that aren't being discovered
+# Common values: 100 (fast), 1000 (recommended), 5000 (thorough), 10000 (very thorough)
+# Higher values increase memory usage and rescan time
+DCRWALLET_GAP_LIMIT=200
+
 # Optional: Uncomment for testnet
 # DCRD_TESTNET=1
 
