--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,9 @@ services:
       - DCRD_RPC_USER=${DCRD_RPC_USER:-decred}
       - DCRD_RPC_PASS=${DCRD_RPC_PASS:-decredpass}
       - DCRD_RPC_HOST=dcrd
+      - DCRWALLET_GAP_LIMIT=${DCRWALLET_GAP_LIMIT:-1000}  # Address gap limit for discovery
+    command: >
+      --gaplimit=${DCRWALLET_GAP_LIMIT:-1000}
     depends_on:
       dcrd:
         condition: service_healthy
