--- a/env.example
+++ b/env.example
@@ -19,6 +19,12 @@ DCRWALLET_RPC_PASS=change_this_to_a_secure_wallet_password
 # Can be a tag (e.g., release-v4.0.0) or branch name
 # DCRWALLET_VERSION=releaxe-v2.0.6
 
+# dcrd Extra Arguments
+# Enable transaction index for block explorer functionality
+# This allows full transaction lookup by hash
+# Note: First startup with this flag will trigger a full blockchain reindex (may take hours)
+DCRD_EXTRA_ARGS=--txindex
+
 # Dcrwallet Address Gap Limit (default: 1000)
 # This controls how many consecutive unused addresses the wallet will monitor
 # Increase this if you have funds at higher address indices that aren't being discovered
