--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,14 @@ services:
       - dcrd-data:/home/dcrd/.dcrd
       - dcrd-certs:/certs
       - ./dcrd.conf:/home/dcrd/.dcrd/dcrd.conf:ro
+    environment:
+      - DCRD_EXTRA_ARGS=${DCRD_EXTRA_ARGS:---txindex}
     command: >
       --rpcuser=${DCRD_RPC_USER:-decred}
       --rpcpass=${DCRD_RPC_PASS:-decredpass}
       --rpclisten=0.0.0.0:9109
       --rpccert=/certs/rpc.cert
       --rpckey=/certs/rpc.key
-      --txindex
     restart: unless-stopped
     networks:
       - decred-network
@@ -47,9 +48,9 @@ services:
       - DCRD_RPC_USER=${DCRD_RPC_USER:-decred}
       - DCRD_RPC_PASS=${DCRD_RPC_PASS:-decredpass}
       - DCRD_RPC_HOST=dcrd
-      - DCRWALLET_GAP_LIMIT=${DCRWALLET_GAP_LIMIT:-1000}  # Address gap limit for discovery
+      - DCRWALLET_GAP_LIMIT=${DCRWALLET_GAP_LIMIT:-400}  # Address gap limit for discovery
     command: >
-      --gaplimit=${DCRWALLET_GAP_LIMIT:-1000}
+      --gaplimit=${DCRWALLET_GAP_LIMIT:-400}
     depends_on:
       dcrd:
         condition: service_healthy
