--- a/env.example
+++ b/env.example
@@ -19,12 +19,18 @@ DCRWALLET_RPC_PASS=change_this_to_a_secure_wallet_password
 # Can be a tag (e.g., release-v4.0.0) or branch name
 # DCRWALLET_VERSION=releaxe-v2.0.6
 
-# Dcrwallet Address Gap Limit (default: 1000)
+# dcrd Extra Arguments
+# Enable transaction index for block explorer functionality
+# This allows full transaction lookup by hash
+# Note: First startup with this flag will trigger a full blockchain reindex (may take hours)
+DCRD_EXTRA_ARGS=--txindex
+
+# Dcrwallet Address Gap Limit (default: 400)
 # This controls how many consecutive unused addresses the wallet will monitor
 # Increase this if you have funds at higher address indices that aren't being discovered
-# Common values: 100 (fast), 1000 (recommended), 5000 (thorough), 10000 (very thorough)
+# Common values: 100 (fast), 400 (recommended), 1000 (thorough), 5000 (very thorough)
 # Higher values increase memory usage and rescan time
-DCRWALLET_GAP_LIMIT=200
+DCRWALLET_GAP_LIMIT=400
 
 # Optional: Uncomment for testnet
 # DCRD_TESTNET=1
