--- a/env.example
+++ b/env.example
@@ -13,11 +13,11 @@ DCRWALLET_RPC_PASS=change_this_to_a_secure_wallet_password
 
 # Optional: dcrd version/branch to build (default: master)
 # Can be a tag (e.g., release-v2.0.6) or branch name
-# DCRD_VERSION=master
+DCRD_VERSION=release-v2.0.6
 
 # Optional: dcrwallet version/branch to build (default: master)
 # Can be a tag (e.g., release-v4.0.0) or branch name
-# DCRWALLET_VERSION=releaxe-v2.0.6
+DCRWALLET_VERSION=release-v2.0.6
 
 # dcrd Extra Arguments
 # Enable transaction index for block explorer functionality
