add grpc for wallet rescan progress

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,7 @@ services:
       - DCRD_RPC_CERT=/certs/rpc.cert
       - DCRWALLET_RPC_HOST=dcrwallet
       - DCRWALLET_RPC_PORT=9110
+      - DCRWALLET_GRPC_PORT=9111
       - DCRWALLET_RPC_USER=${DCRWALLET_RPC_USER:-dcrwallet}
       - DCRWALLET_RPC_PASS=${DCRWALLET_RPC_PASS:-dcrwalletpass}
       - DCRWALLET_RPC_CERT=/certs/rpc.cert
